Clean up + fix website text

--- a/milestones/milestone3/milestone3_data_processing.ipynb
+++ b/milestones/milestone3/milestone3_data_processing.ipynb
@@ -2679,24 +2679,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "games19_top3.to_csv('../../data/games2019_top3.csv')\n",
-        "games22_top3.to_csv('../../data/games2022_top3.csv')\n",
-        "games25_top3.to_csv('../../data/games2025_top3.csv')"
+        "games19_top3.to_csv('../data/games2019_top3.csv')\n",
+        "games22_top3.to_csv('../data/games2022_top3.csv')\n",
+        "games25_top3.to_csv('../data/games2025_top3.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "games19_top3.to_json(\"../../data/games2019_top3.json\", orient=\"records\", indent=2)\n",
-        "games22_top3.to_json(\"../../data/games2022_top3.json\", orient=\"records\", indent=2)\n",
-        "games25_top3.to_json(\"../../data/games2025_top3.json\", orient=\"records\", indent=2)"
+        "games19_top3.to_json(\"../data/games2019_top3.json\", orient=\"records\", indent=2)\n",
+        "games22_top3.to_json(\"../data/games2022_top3.json\", orient=\"records\", indent=2)\n",
+        "games25_top3.to_json(\"../data/games2025_top3.json\", orient=\"records\", indent=2)"
       ]
     },
     {
@@ -2713,8 +2713,7 @@
         "For our specific case, we care about the genres of the games (war, sci-fi...), not the mechanics of the game (card game, party game...)\n",
         "\n",
         "1. Remove mechanics\n",
-        "2. Combine sub-genres under the same genre\n",
-        "3. Have one main genre for each board game"
+        "2. Combine sub-genres under the same genre"
       ]
     },
     {
@@ -3058,7 +3057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3070,8 +3069,8 @@
         "\n",
         "for year, grouped_data in grouped.items():\n",
         "    df = get_normalized_category_contributions(grouped_data)\n",
-        "    df.to_csv(f'../../data/categories_{year}.csv')\n",
-        "    df.to_json(f'../../data/categories_{year}.json', orient='index', indent=2)"
+        "    df.to_csv(f'../data/categories_{year}.csv')\n",
+        "    df.to_json(f'../data/categories_{year}.json', orient='index', indent=2)"
       ]
     },
     {
@@ -3099,7 +3098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3108,7 +3107,7 @@
         "props_2025 = compute_board_game_properties(games25, \"2025\")\n",
         "\n",
         "properties_df = pd.DataFrame([props_2019, props_2022, props_2025])\n",
-        "properties_df.to_csv(\"../../data/board_game_properties_over_time.csv\", index=False)"
+        "properties_df.to_csv(\"../data/board_game_properties_over_time.csv\", index=False)"
       ]
     },
     {
